--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,15 +27,15 @@
       {% endfor %}
 
       <div class="sidebar-social">
-        <a class="sidebar-social-item" href="{{ site.social.github }}/archive/v{{ site.version }}.zip">
+        <a class="sidebar-social-item" href="{{ site.social.github }}" target="_blank">
           <i class="icon fa fa-github"></i>
         </a>
         <span class="sidebar-social-item">&nbsp;|&nbsp;</span>
-        <a class="sidebar-social-item" href="{{ site.social.twitter }}/archive/v{{ site.version }}.zip">
+        <a class="sidebar-social-item" href="{{ site.social.twitter }}" target="_blank">
           <i class="icon fa fa-twitter"></i>
         </a>
         <span class="sidebar-social-item">&nbsp;|&nbsp;</span>
-        <a class="sidebar-social-item" href="{{ site.social.stack_overflow }}/archive/v{{ site.version }}.zip">
+        <a class="sidebar-social-item" href="{{ site.social.stack_overflow }}" target="_blank">
           <i class="icon fa fa-stack-overflow"></i>
         </a>
         <span class="sidebar-social-item">&nbsp;|&nbsp;</span>
